--- a/ilaiwrighttypeposter/index.html
+++ b/ilaiwrighttypeposter/index.html
@@ -30,7 +30,7 @@
     </div>
 <div>
   <aside> <!-- The <aside> element holds content, such as sidebars, inserts, or brief explanations, that is tangentially related to the content surrounding it. -->
-      <p class="a"> As THE slab serif type face, I am a redesign of a seasoned typeface that made such an impact on typography that its name was used for all bracketed slab serifs of its time. That's where I come into play. Even if you haven't noticed, I show up typographically all around you. Have you ever seen the SONY logo? Starbucks logo? Wells Fargo? What about a children's book? Yep, that's me! Now let me tell you a little bit about myself ad where I came from. </p>
+      <p class="a"> As THE slab serif type face, I am a redesign of a seasoned typeface that made such an impact on typography that its name was used for all bracketed slab serifs of its time. That's where I come into play. Even if you haven't noticed, I show up typographically all around you. Have you ever seen the SONY logo? Starbucks logo? Wells Fargo? What about a children's book? Yep, that's me! Now let me tell you a little bit about myself and where I came from. </p>
   </aside>
 
 <div class="row"><!-- This is the box that will contain our three columns-->
