--- a/ilaiwrighttypeposter/index.html
+++ b/ilaiwrighttypeposter/index.html
@@ -30,7 +30,7 @@
     </div>
 <div>
   <aside> <!-- The <aside> element holds content, such as sidebars, inserts, or brief explanations, that is tangentially related to the content surrounding it. -->
-      <p class="a"> As THE slab serif type face, I am a redesign of a seasoned typeface that made such an impact on typography that its name was used for all bracketed slab serifs of its time. That's where I come into play. Even if you haven't noticed, I show up typographically all around you. Have you ever seen the SONY logo? Starbucks logo? Wells Fargo? What about a children's book? Yep, that's me! Now let me tell you a little bit about myself and where I came from. </p>
+      <p class="a"> As THE slab serif type face, I am a redesign of a seasoned typeface that made such an impact on typography that its name was used for all bracketed slab serifs of its time. Yes, I've had a little work done between the 1830s-40s and the 1930s-50s. How else do you think I still look so young and fresh? That's where I come into play. Even if you haven't noticed, I show up typographically all around you. Have you ever seen the SONY logo? Starbucks logo? Wells Fargo? What about a children's book? Yep, that's me! Now let me tell you a little bit about myself and where I came from. </p>
   </aside>
 
 <div class="row"><!-- This is the box that will contain our three columns-->
@@ -42,7 +42,7 @@
     
     
       <h2>TYPE FOUNDRIES</h2>
-      <p>These are a few of my babysitters. I bounce around from one to the other, but URW is my favorite. (Shhh...Don't tell the others I said that.)</p>
+      <p>These are a few of aunts and uncles. I bounce around from one to the other, but URW is my favorite. (Shhh...Don't tell the others I said that.)</p>
       <ul>
         <li>Haas</li>
         <li>Stempel</li>
@@ -54,7 +54,7 @@
       </ul>
 
       <h2>DESIGNER</h2>
-      <p>This is my Dad: the man with the plan! Without him, I wouldn't even be here. </p>
+      <p>This is my Dad: the man with the plan! Without him, the new and improved me wouldn't even be here. </p>
 
 <ul>
         <li>Hermann Eidenbenz</li>
