--- a/ilaiwrighttypeposter/index.html
+++ b/ilaiwrighttypeposter/index.html
@@ -42,7 +42,7 @@
     
     
       <h2>TYPE FOUNDRIES</h2>
-      <p>These are a few of aunts and uncles. I bounce around from one to the other, but URW is my favorite. (Shhh...Don't tell the others I said that.)</p>
+      <p>These are a few of my aunts and uncles. They all visit me from time to time, but URW is my favorite. (Shhh...Don't tell the others I said that.)</p>
       <ul>
         <li>Haas</li>
         <li>Stempel</li>
