--- a/ilaiwrighttypeposter/index.html
+++ b/ilaiwrighttypeposter/index.html
@@ -54,9 +54,10 @@
       </ul>
 
       <h2>DESIGNER</h2>
-      <p>This is my Dad: the man with the plan! Without him, the new and improved me wouldn't even be here. </p>
+      <p>These are my parents! Without them, neither the old nor the new and improved me would even be here. </p>
 
 <ul>
+        <li>Robert Besley</li>
         <li>Hermann Eidenbenz</li>
       </ul>
       
